# sqlmesh-af

./: .gitignore  README.md  pyproject.toml
examples/: Dockerfile  docker-compose.yaml
examples/dags/: sqlmesh_af_example_dag.py
examples/dags/sqlmesh_project/: .gitignore  addsushidata.py  config.yaml
examples/dags/sqlmesh_project/models/: customer_revenue_by_day.sql  customer_revenue_lifetime.sql  items.sql  order_items.sql  orders.sql  waiter_revenue_by_day.sql
sqlmesh_af/: __init__.py
sqlmesh_af/config/: __init__.py  gateway_conf.py  project_conf.py
sqlmesh_af/dag/: __init__.py  dag.py
sqlmesh_af/operator/: sqlmesh_run.py
sqlmesh_af/utils/: sqlmesh_.py
